--- a/resources/sass/ui/layout.scss
+++ b/resources/sass/ui/layout.scss
@@ -306,6 +306,7 @@
   padding: 10px;
   overflow: auto;
   position: relative;
+  height: calc(100vh - 180px);
 
 
 
@@ -316,6 +317,7 @@
   background: #F9FAFC;
   margin-bottom: 10px;
   width: 100%;
+  height: 100%;
   box-shadow: 0 2px 2px 0 rgba(0, 0, 0, .14), 0 1px 5px 0 rgba(0, 0, 0, .12), 0 3px 1px -2px rgba(0, 0, 0, .2);
 
   &--no-shadow {
